--- a/style.css
+++ b/style.css
@@ -1,29 +1,45 @@
-/* The code below centers the text of all h1's on the page. */
+
+/*Background color*/
+
+body{
+  background-color: #b8dece;
+}
+/* Text css */
 h1 {
     text-align:center;
 }
-
-/* The code below centers all images on the page and gives them a width of 400px. */
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width:400px;
-}
-
-/* The code below centers the text of all h2's on the page. */
 h2 {
     text-align:center;
 }
-
-/* The code below aligns all the sections horizontally on the bottom. */
+.Background{
+  font-size: 26px;
+}
+/*  section container */
 .section-container {
     display:flex;
     justify-content:space-between;
+  
 }
 
-/* The code below a solid black border to section and puts space between them (the margin). */
-.section {
+/* section control */
+.section{
     border: 5px black solid;
     margin:5px;
+   width: 600px;
+  background-color: #9fe3e1;
 }
+
+/* Images */
+
+img{
+     width: 400px;
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+     
+   }
+
+.img2{
+  width: 200px;
+}
+
